# molten

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
benchmarks/: bench_full.py  bench_kernels.py  bench_molten_generated.py  ops.py  real_model_bench.py  reference_kernels.cu  validate_correctness.py
molten/: __init__.py  cli.py  codegen.py  compiler.py  decorator.py  fusion.py  ir.py  runtime.py
paper/: gen_figures.py  molten.tex
tests/: test_codegen.py  test_fusion.py  test_ir.py
