[build-system]
requires = ["setuptools>=68.0", "torch>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molten"
version = "0.1.0"
description = "Fused GPU kernel generation from mathematical specifications"
authors = [{name = "Tushar Sharma", email = "txshar@proton.me"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-benchmark"]
cuda = ["pycuda", "cuda-python"]

[project.urls]
Homepage = "https://github.com/TxsharDev/molten"

[tool.setuptools.packages.find]
where = ["."]
include = ["molten*"]
